change to expensive db

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -18,7 +18,7 @@
             var final =[['Year','Refugee']];
             for( var i=0;i<a.length;i++){
             var output=[];
-            output.push(a[i]["_id"]);
+            output.push(a[i]["_id"].toString());
             output.push(a[i]["numberOfRefugee"]);
             final.push(output);
         };
