change a error of search page query show issue

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -136,19 +136,19 @@
         var selectedMeasure = document.getElementById(x).value;
         if (selectedMeasure == "gdp") {
             document.getElementById("measureLabel").innerText = "highest GDP";
-        } else if (selectedMeasure == "terrorism") {
+        } else if (selectedMeasure == "terror_case") {
             document.getElementById("measureLabel").innerText = "most Terrorism cases";
         } else if (selectedMeasure == "population") {
             document.getElementById("measureLabel").innerText = "largest Population";
         } else if (selectedMeasure == "migrant") {
             document.getElementById("measureLabel").innerText = "most Migrant";
-        } else if (selectedMeasure == "life") {
+        } else if (selectedMeasure == "life_expectancy") {
             document.getElementById("measureLabel").innerText = "highest Life Expectancy";
-        }else if (selectedMeasure == "unemployment") {
+        }else if (selectedMeasure == "unemploy_rate") {
             document.getElementById("measureLabel").innerText = "highest Unemployment Rate";
         }else if (selectedMeasure == "ntd") {
             document.getElementById("measureLabel").innerText = "largest number of people requiring Intervention against NTDs";
-        }else if (selectedMeasure == "hb") {
+        }else if (selectedMeasure == "hb_coverage") {
             document.getElementById("measureLabel").innerText = "largest Hepatitis B immunization coverage";
         }
     }
